<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.lmo.fadergsn2.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_archived_list"
        android:name="com.lmo.fadergsn2.ui.archived_list.ArchivedListFragment"
        android:label="@string/archived_list"
        tools:layout="@layout/fragment_archived_list" />

    <fragment
        android:id="@+id/nav_subTask"
        android:name="com.lmo.fadergsn2.ui.subTask.SubTaskFragment"
        android:label="@string/menu_subTasks"
        tools:layout="@layout/fragment_sub_task" >

    </fragment>

    <fragment
        android:id="@+id/nav_form"
        android:name="com.lmo.fadergsn2.ui.form.FormFragment"
        android:label="@string/menu_form"
        tools:layout="@layout/fragment_from" />
    
</navigation>